# xcb_bar

./: .gitignore  Cargo.toml  flake.nix
src/: main.rs
